@@ -137,5 +137,66 @@ ACE_TMAIN(int, ACE_TCHAR*[])
     TEST_CHECK(sequence.depth() == 3);
   }
 
+  // Range iterator
+  {
+    DisjointSequence sequence;
+    DisjointSequence::range_iterator it;
+    DisjointSequence::range_type range;
+
+    // ASSERT a single dicontiguity returns a single range
+    //        of values: <low + 1, high - 1>
+    sequence = DisjointSequence(0);
+    sequence.update(5); // discontiguity
+
+    it = sequence.range_begin();
+
+    range = *it;
+    TEST_CHECK(range.first == SequenceNumber(1));
+    TEST_CHECK(range.second == SequenceNumber(4));
+    TEST_CHECK(++it == sequence.range_end());
+
+    // ASSERT multiple contiguities return multiple ranges
+    //        of values:
+    sequence = DisjointSequence(0);
+    sequence.update(5);   // discontiguity
+    sequence.update(10);  // discontiguity
+
+    it = sequence.range_begin();
+
+    range = *it;
+    TEST_CHECK(range.first == SequenceNumber(1));
+    TEST_CHECK(range.second == SequenceNumber(4));
+    TEST_CHECK(++it != sequence.range_end());
+    
+    range = *it;
+    TEST_CHECK(range.first == SequenceNumber(6));
+    TEST_CHECK(range.second == SequenceNumber(9));
+    TEST_CHECK(++it == sequence.range_end());
+    
+    // ASSERT multiple contiguities return  multiple ranges
+    //        of values with a difference of one:
+    sequence = DisjointSequence(0);
+    sequence.update(5);   // discontiguity
+    sequence.update(7);  // discontiguity
+    sequence.update(9);  // discontiguity
+
+    it = sequence.range_begin();
+
+    range = *it;
+    TEST_CHECK(range.first == SequenceNumber(1));
+    TEST_CHECK(range.second == SequenceNumber(4));
+    TEST_CHECK(++it != sequence.range_end());
+    
+    range = *it;
+    TEST_CHECK(range.first == SequenceNumber(6));
+    TEST_CHECK(range.second == SequenceNumber(6));
+    TEST_CHECK(++it != sequence.range_end());
+    
+    range = *it;
+    TEST_CHECK(range.first == SequenceNumber(8));
+    TEST_CHECK(range.second == SequenceNumber(8));
+    TEST_CHECK(++it == sequence.range_end());
+  }
+
   return 0;
 }
